Endpoint test pass with placeholder values for service